# boggle

./: Cargo.toml  bogglewords.txt  wordsTest.txt
src/: boggle.rs  main.rs
