[package]
name = "Rusting"
version = "0.1.0"
authors = ["Owen Smallwood <owen.smallwood@coconutsoftware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
trie-rs = "0.1.1"
text_io = "0.1.8"
colored = "2"